--- a/TextEditorApp/TextEditorApp.csproj
+++ b/TextEditorApp/TextEditorApp.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomControl\IEditorControl.cs" />
+    <Compile Include="CustomControl\ITextEditorControl.cs" />
     <Compile Include="CustomControl\TextEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -64,7 +64,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\ArrayExtension.cs" />
     <Compile Include="Utilities\FileUtils.cs" />
-    <Compile Include="Utilities\ListUtils.cs" />
     <EmbeddedResource Include="CustomControl\TextEditor.resx">
       <DependentUpon>TextEditor.cs</DependentUpon>
     </EmbeddedResource>
